[package]
name = "hgg"
version = "0.1.1-alpha.0"
authors = ["Geordon Worley <vadixidav@gmail.com>"]
edition = "2018"
description = "Approximate nearest neighbor search collection"
documentation = "https://docs.rs/hgg/"
repository = "https://github.com/rust-cv/hgg"
keywords = ["search", "knn", "ann", "nearest", "neighbor"]
categories = ["no-std", "computer-vision", "data-structures"]
license = "MIT"
readme = "README.md"

[dependencies]
space = { version = "0.13.0", default-features = false }
header-vec = { version = "0.1.0" }
ahash = { version = "0.7.4", default-features = false }
hashbrown = { version = "0.11.2", default-features = false, features = ["inline-more"] }
num-traits = { version = "0.2.14", default-features = false }

[dev-dependencies]
space = { version = "0.13.0", default-features = false, features = ["simd-hamming"] }
rand = "0.8.4"
rand_xoshiro = "0.6.0"
csv = "1.1.6"
serde = { version = "1.0.126", features = ["derive"] }

[profile.release]
lto = true
codegen-units = 1
